# psai-bench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VISION.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md
.planning/phases/01-repository-hygiene/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md
.planning/phases/06-scenario-generation-rebuild/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-testing-and-verification/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-decision-rubric-documentation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-VERIFICATION.md
.planning/phases/09-scoring-and-schema-updates/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-documentation-and-release/: 10-01-PLAN.md  10-01-SUMMARY.md  10-CONTEXT.md  10-VERIFICATION.md
.planning/phases/11-schema-v3/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-VERIFICATION.md
.planning/phases/12-visual-only-scenarios/: 12-01-PLAN.md  12-01-SUMMARY.md  12-CONTEXT.md  12-VERIFICATION.md
.planning/phases/13-contradictory-scenarios/: 13-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: EVALUATION_PROTOCOL.md  decision-rubric.md  dispatch-decision-rubric.md
psai_bench/: __init__.py  baselines.py  cli.py  cost_model.py  distributions.py  downloader.py  evaluators.py  frame_extraction.py  generators.py  schema.py  scorer.py  statistics.py  validation.py  video_mapper.py
results/: suspicious_analysis.json
results/evaluations/: gpt-4o_ucf_metadata_run1.json
tests/: conftest.py  test_adversarial_v4_generator.py  test_adversarial_v4_schema.py  test_baselines_dispatch.py  test_cli.py  test_contradictory.py  test_core.py  test_cost_model.py  test_decision_rubric.py  test_e2e_v4.py  test_leakage.py  test_phase15_regression.py  test_phase16_cli.py  test_schema_v3.py  test_schema_v4.py  test_scoring_dispatch.py  test_scoring_sequences.py  test_seed_regression.py  test_site_generalization.py  test_site_leakage.py  test_statistics.py  test_task1_12_01_tdd.py  test_task1_tdd.py  test_temporal.py  test_visual_only.py
(+50 files in other folders)
